   the member.
 * Added dialplan function QUEUE_EXISTS to check if a queue exists
 * The queue logger now allows events to optionally propagate to a file,
   even when realtime logging is turned on.  Additionally, realtime logging
   supports sending the event arguments to 5 individual fields, although it
   will fallback to the previous data definition, if the new table layout is
   not found.

mISDN channel driver (chan_misdn) changes
----------------------------------------
 * Added display_connected parameter to misdn.conf to put a display string
   in the CONNECT message containing the connected name and/or number if
   the presentation setting permits it.
 * Added display_setup parameter to misdn.conf to put a display string
   in the SETUP message containing the caller name and/or number if the
   presentation setting permits it.
 * Made misdn.conf parameters localdialplan and cpndialplan take a -1 to
   indicate the dialplan settings are to be obtained from the asterisk
   channel.
 * Made misdn.conf parameter callerid accept the "name" <number> format
   used by the rest of the system.
 * Made use the nationalprefix and internationalprefix misdn.conf
   parameters to prefix any received number from the ISDN link if that
   number has the corresponding Type-Of-Number.  NOTE:  This includes
   comparing the incoming call's dialed number against the MSN list.
 * Added the following new parameters: unknownprefix, netspecificprefix,
   subscriberprefix, and abbreviatedprefix in misdn.conf to prefix any
   received number from the ISDN link if that number has the corresponding
   Type-Of-Number.
 * Added new dialplan application misdn_command which permits controlling
   the CCBS/CCNR functionality.
 * Added new dialplan function mISDN_CC which permits retrieval of various
   values from an active call completion record.
 * For PTP, you should manually send the COLR of the redirected-to party